--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,7 +27,6 @@
                 android:layout_width="200dp"
                 android:layout_height="70dp"
                 android:layout_centerVertical="true"
-                android:layout_marginStart="@dimen/dp30"
                 android:src="@drawable/ic_main_logo" />
 
             <androidx.appcompat.widget.AppCompatTextView
@@ -49,9 +48,9 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="@dimen/dp20"
-            android:layout_marginEnd="20dp"
+            android:layout_marginStart="@dimen/dp10"
+            android:layout_marginTop="@dimen/dp10"
+            android:layout_marginEnd="@dimen/dp15"
             android:background="@color/white">
 
             <com.aries.ui.view.tab.SlidingTabLayout
@@ -94,11 +93,11 @@
                     android:layout_marginStart="@dimen/dp5"
                     android:background="@drawable/shape_choose_date"
                     android:drawableEnd="@drawable/ic_date_rect"
-                    android:drawablePadding="@dimen/dp25"
+                    android:drawablePadding="@dimen/dp10"
                     android:gravity="center"
                     android:minHeight="40dp"
-                    android:paddingStart="@dimen/dp_40"
-                    android:paddingEnd="@dimen/dp_40"
+                    android:paddingStart="@dimen/dp10"
+                    android:paddingEnd="@dimen/dp10"
                     android:text="@={mainModel.chooseDateFiled}"
                     android:textColor="@color/gray_9"
                     android:textSize="@dimen/sp20"
@@ -107,14 +106,14 @@
                 <androidx.appcompat.widget.AppCompatTextView
                     android:layout_width="wrap_content"
                     android:layout_height="40dp"
-                    android:layout_marginStart="@dimen/dp8"
+                    android:layout_marginStart="@dimen/dp5"
                     android:background="@drawable/shape_login_btn"
                     android:drawableStart="@drawable/ic_search"
-                    android:drawablePadding="@dimen/dp15"
+                    android:drawablePadding="@dimen/dp10"
                     android:gravity="center_vertical"
                     android:minHeight="40dp"
-                    android:paddingStart="@dimen/dp25"
-                    android:paddingEnd="@dimen/dp25"
+                    android:paddingStart="@dimen/dp10"
+                    android:paddingEnd="@dimen/dp10"
                     android:text="检索"
                     android:textColor="@color/white"
                     android:textSize="@dimen/sp20"
@@ -129,10 +128,10 @@
             android:id="@+id/vp_orders"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
+            android:layout_marginStart="@dimen/dp15"
             android:layout_marginTop="@dimen/dp10"
-            android:layout_marginEnd="30dp"
-            android:layout_marginBottom="20dp" />
+            android:layout_marginEnd="@dimen/dp15"
+            android:layout_marginBottom="@dimen/dp10" />
 
 
     </LinearLayout>
