--- a/app/src/main/res/layout/activity_check.xml
+++ b/app/src/main/res/layout/activity_check.xml
@@ -75,7 +75,7 @@
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_marginBottom="14dp"
+                android:layout_marginBottom="@dimen/dp10"
                 android:layout_weight="2"
                 android:orientation="vertical">
 
@@ -85,9 +85,9 @@
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="@dimen/dp15"
                     android:orientation="vertical"
-                    android:paddingStart="@dimen/dp25"
-                    android:paddingTop="@dimen/dp15"
-                    android:paddingEnd="@dimen/dp15">
+                    android:paddingStart="@dimen/dp10"
+                    android:paddingTop="@dimen/dp10"
+                    android:paddingEnd="@dimen/dp10">
 
                     <androidx.appcompat.widget.AppCompatTextView
                         android:layout_width="wrap_content"
@@ -127,8 +127,8 @@
                     android:layout_height="match_parent"
                     android:layout_marginTop="@dimen/dp5"
                     android:orientation="vertical"
-                    android:paddingStart="@dimen/dp25"
-                    android:paddingEnd="@dimen/dp25">
+                    android:paddingStart="@dimen/dp10"
+                    android:paddingEnd="@dimen/dp10">
 
 
                     <LinearLayout
@@ -449,9 +449,9 @@
             <androidx.cardview.widget.CardView
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_marginTop="@dimen/dp15"
-                android:layout_marginEnd="@dimen/dp25"
-                android:layout_marginBottom="@dimen/dp15"
+                android:layout_marginTop="@dimen/dp10"
+                android:layout_marginEnd="@dimen/dp10"
+                android:layout_marginBottom="@dimen/dp10"
                 android:layout_weight="1"
                 binding:cardBackgroundColor="@color/white"
                 binding:cardCornerRadius="@dimen/dp8"
@@ -542,16 +542,16 @@
                                 android:id="@+id/tv_delivery_name"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:textColor="@color/black_3"
                                 android:layout_marginBottom="@dimen/dp5"
+                                android:textColor="@color/black_3"
                                 android:textSize="@dimen/sp18" />
 
                             <androidx.appcompat.widget.AppCompatTextView
                                 android:id="@+id/tv_delivery_type"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:textColor="@color/black_3"
                                 android:layout_marginBottom="@dimen/dp5"
+                                android:textColor="@color/black_3"
                                 android:textSize="@dimen/sp18" />
 
 
@@ -559,16 +559,16 @@
                                 android:id="@+id/tv_receive_count"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:textColor="@color/black_3"
                                 android:layout_marginBottom="@dimen/dp5"
+                                android:textColor="@color/black_3"
                                 android:textSize="@dimen/sp18" />
 
                             <androidx.appcompat.widget.AppCompatTextView
                                 android:id="@+id/tv_delivery_count"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:textColor="@color/black_3"
                                 android:layout_marginBottom="@dimen/dp5"
+                                android:textColor="@color/black_3"
                                 android:textSize="@dimen/sp18" />
 
                         </LinearLayout>
@@ -609,11 +609,11 @@
                                     <LinearLayout
                                         android:id="@+id/ll_edit_count"
                                         android:layout_width="wrap_content"
-                                        android:layout_height="40dp"
+                                        android:layout_height="30dp"
                                         android:gravity="center_vertical"
                                         android:orientation="horizontal">
 
-                                        <androidx.appcompat.widget.AppCompatEditText
+                                        <androidx.appcompat.widget.AppCompatTextView
                                             android:id="@+id/edit_current_count"
                                             android:layout_width="100dp"
                                             android:layout_height="match_parent"
