--- a/app/src/main/res/layout/layout_upload_item.xml
+++ b/app/src/main/res/layout/layout_upload_item.xml
@@ -55,8 +55,7 @@
                 android:gravity="center"
                 android:text="上传成功"
                 android:textColor="#FF0000"
-                android:textSize="@dimen/sp18"
-                android:visibility="gone" />
+                android:textSize="@dimen/sp18" />
         </FrameLayout>
 
 
