--- a/app/src/main/res/layout/activity_upload_img.xml
+++ b/app/src/main/res/layout/activity_upload_img.xml
@@ -22,6 +22,7 @@
                 android:paddingBottom="@dimen/dp20">
 
                 <androidx.appcompat.widget.AppCompatTextView
+                    android:id="@+id/tv_upload_progress"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:padding="@dimen/dp10"
