--- a/app/src/main/res/layout/activity_check.xml
+++ b/app/src/main/res/layout/activity_check.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:app="http://schemas.android.com/tools"
+<layout xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:binding="http://schemas.android.com/apk/res-auto">
 
     <data>
@@ -473,8 +473,8 @@
                             android:layout_height="190dp"
                             android:background="@color/black">
 
-                            <com.serenegiant.usb.widget.UVCCameraTextureView
-                                android:id="@+id/has_camera"
+                            <TextureView
+                                android:id="@+id/preview"
                                 android:layout_width="match_parent"
                                 android:layout_height="match_parent" />
 
@@ -484,6 +484,16 @@
                                 android:layout_height="45dp"
                                 android:layout_gravity="center"
                                 app:indicatorName="com.cangjie.scalage.core.loading.ArcRotateIndicator" />
+
+                            <androidx.appcompat.widget.AppCompatTextView
+                                android:id="@+id/tv_camera_status"
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:gravity="center"
+                                android:text="摄像头故障或未连接！"
+                                android:textColor="@color/white"
+                                android:textSize="@dimen/sp16"
+                                android:visibility="gone" />
 
                         </FrameLayout>
 
